--- a/static/sass/base/theme-default.scss
+++ b/static/sass/base/theme-default.scss
@@ -4,6 +4,7 @@ $theme-color-dark:          #4C67EA;
 $theme-color-light:         #819FF5;
 
 //文字颜色
+$theme-font-color:          #4f69eb;
 $font-color:                #1e1e1e;                
 $hint-font-color:           #666;                
 
