--- a/static/sass/components/_btn.scss
+++ b/static/sass/components/_btn.scss
@@ -9,4 +9,6 @@
     margin: .5rem;
     color: #fff;
     background: linear-gradient(to right,$theme-color-dark,$theme-color-light);
+        box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.3);
+
 }
