--- a/static/sass/base/theme-default.scss
+++ b/static/sass/base/theme-default.scss
@@ -6,8 +6,8 @@ $theme-color-light:         #819FF5;
 //文字颜色
 $theme-font-color:          #4f69eb;
 $font-color:                #1e1e1e;                
-$hint-font-color:           #666;                
+$hint-font-color:           #666666;                
 
 // 按钮灰色
-$gray-dark:                 #6a6a6a;
+$gray-dark:                 #666666;
 $gray-light:                #969696;
