--- a/static/sass/components/_header.scss
+++ b/static/sass/components/_header.scss
@@ -2,8 +2,8 @@
     position: absolute;
     top: 0;
     width: 100%;
-    height: .8rem;
-    line-height: .8rem;
+    height: .88rem;
+    line-height: .88rem;
     text-align: center;
     background: linear-gradient(to right,#4C67EA,#819FF5);
     box-shadow: 0 0 30px #000;
@@ -13,6 +13,17 @@
         display: table;
         clear: both;
     }
+
+    &.header-white{
+        background: #ffffff;
+        box-shadow: 0 0 30px rgba(0, 0, 0, .3);
+
+        .iconfont{
+            color: $gray-light;
+        }
+    }
+
+    
 
     .nav-header-title{
         display: inline-block;
@@ -29,6 +40,11 @@
         padding-right: .3rem;
         color: #fff;
         position: relative;
+
+        .icon-20{
+            position: relative;
+            top: .05rem;
+        }
         
         .msg-point{
             display: block;
