--- a/static/sass/Healer/style.scss
+++ b/static/sass/Healer/style.scss
@@ -12,6 +12,7 @@
 @import "../components/footer";
 @import "../components/btn";
 @import "../components/form-list";
+@import "../components/pick-list";
 
 
 
@@ -96,3 +97,5 @@
     color: #696969;
     margin: 0.8rem .5rem;
 }
+
+//inputBirthday页样式
