--- a/static/sass/base/common.scss
+++ b/static/sass/base/common.scss
@@ -23,6 +23,9 @@ header + section {
 
 .mb-50{margin-bottom: .5rem!important;}
 .mb-100{margin-bottom: 1rem!important;}
+.text-left{ text-align: left!important;};
+.text-center{ text-align: center!important;};
+.text-right{ text-align: right!important;};
 
 /* 文本类样式 */
 
