--- a/static/sass/base/theme-default.scss
+++ b/static/sass/base/theme-default.scss
@@ -7,6 +7,7 @@ $theme-color-light:         #819FF5;
 $theme-font-color:          #4f69eb;
 $font-color:                #1e1e1e;                
 $hint-font-color:           #666666;                
+$light-font-color:          #969696;                
 
 // 按钮灰色
 $gray-dark:                 #666666;
